--- a/styles__css/styles_bootstrap.css
+++ b/styles__css/styles_bootstrap.css
@@ -19,8 +19,8 @@
   --bs-indigo: #6237FF;
   --bs-purple: #A1B0FC;
   --bs-pink: #D42DA3;
-  --bs-red: #DF6951;
-  --bs-orange: #DF6951;
+  --bs-red: #f87141;
+  --bs-orange: #f87141;
   --bs-yellow: #F1A501;
   --bs-green: #79B93C;
   --bs-teal: #006380;
@@ -33,10 +33,10 @@
   --bs-success: #79B93C;
   --bs-info: #006380;
   --bs-warning: #F1A501;
-  --bs-danger: #DF6951;
+  --bs-danger: #f87141;
   --bs-light: #F0F4F9;
   --bs-dark: #212832;
-  --bs-font-sans-serif: "Poppins", "Rubik", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --bs-font-sans-serif: "Roboto","Poppins", "Rubik", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --bs-font-monospace: "SFMono-Regular", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 254, 254, 0.15), rgba(255, 254, 254, 0));
 }
@@ -56,7 +56,7 @@
 
 body {
   margin: 0;
-  font-family: "Poppins", "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -3771,14 +3771,14 @@ fieldset:disabled .btn {
 
 .btn-danger {
   color: #FFFEFE;
-  background-color: #DF6951;
-  border-color: #DF6951;
+  background-color: #f87141;
+  border-color: #f87141;
 }
 
 .btn-danger:hover {
-  color: #FFFEFE;
-  background-color: #be5945;
-  border-color: #b25441;
+  color: #f87141;
+  background-color: #ffffff;
+  border-color: #f87141;
 }
 
 .btn-check:focus + .btn-danger, .btn-danger:focus {
@@ -4063,14 +4063,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-danger {
-  color: #DF6951;
-  border-color: #DF6951;
+  color: #f87141;
+  border-color: #f87141;
 }
 
 .btn-outline-danger:hover {
   color: #FFFEFE;
-  background-color: #DF6951;
-  border-color: #DF6951;
+  background-color: #f87141;
+  border-color: #f87141;
 }
 
 .btn-check:focus + .btn-outline-danger, .btn-outline-danger:focus {
@@ -4171,7 +4171,7 @@ fieldset:disabled .btn {
 }
 
 .btn-link:hover {
-  color: #F1A501;
+  color: #f87141;
   text-decoration: underline;
 }
 
@@ -4186,7 +4186,7 @@ fieldset:disabled .btn {
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.8rem 1.7rem;
   font-size: 1.125rem;
-  border-radius: 0.625rem;
+  border-radius: 0.4rem;
 }
 
 .btn-sm, .btn-group-sm > .btn {
@@ -4545,7 +4545,7 @@ fieldset:disabled .btn {
 
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #FFFEFE;
-  background-color: #F1A501;
+  background-color: #f87141;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
@@ -4718,7 +4718,7 @@ fieldset:disabled .btn {
 }
 
 .nav-link:hover, .nav-link:focus {
-  color: #F1A501;
+  color: #f87141;
   text-decoration: none;
 }
 
@@ -4772,7 +4772,7 @@ fieldset:disabled .btn {
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #FFFEFE;
+  color: #f87141;
   background-color: #F1A501;
 }
 
@@ -5178,7 +5178,7 @@ fieldset:disabled .btn {
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: #F1A501;
+  color: #f87141;
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
@@ -5231,7 +5231,7 @@ fieldset:disabled .btn {
 
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #FFFEFE;
+  color: #f87141;
 }
 
 .navbar-dark .navbar-toggler {
@@ -5267,7 +5267,7 @@ fieldset:disabled .btn {
   background-color: #FFFEFE;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 1.5rem;
+  border-radius: .5rem;
 }
 
 .card > hr {
@@ -5381,8 +5381,8 @@ fieldset:disabled .btn {
 
 .card-img,
 .card-img-top {
-  border-top-left-radius: calc(1.5rem - 1px);
-  border-top-right-radius: calc(1.5rem - 1px);
+  border-top-left-radius: calc(.3rem - 1px);
+  border-top-right-radius: calc(.3rem - 1px);
 }
 
 .card-img,
@@ -5519,7 +5519,7 @@ fieldset:disabled .btn {
 
 .page-item.active .page-link {
   z-index: 3;
-  color: #FFFEFE;
+  color: #f87141;
   background-color: #F1A501;
   border-color: #F1A501;
 }
@@ -7653,7 +7653,7 @@ fieldset:disabled .btn {
 
 .shadow {
   -webkit-box-shadow: 0 6.25rem 5rem 0 rgba(0, 0, 0, 0.02), 0 4.05063rem 2.92813rem 0 rgba(0, 0, 0, 0.0152), 0 2.4075rem 1.5925rem 0 rgba(0, 0, 0, 0.0121), 0 1.25rem 0.8125rem 0 rgba(0, 0, 0, 0.01), 0 0.50938rem 0.4075rem 0 rgba(0, 0, 0, 0.0079), 0 0.11563rem 0.19687rem 0 rgba(0, 0, 0, 0.0048) !important;
-  box-shadow: 0 6.25rem 5rem 0 rgba(0, 0, 0, 0.02), 0 4.05063rem 2.92813rem 0 rgba(0, 0, 0, 0.0152), 0 2.4075rem 1.5925rem 0 rgba(0, 0, 0, 0.0121), 0 1.25rem 0.8125rem 0 rgba(0, 0, 0, 0.01), 0 0.50938rem 0.4075rem 0 rgba(0, 0, 0, 0.0079), 0 0.11563rem 0.19687rem 0 rgba(0, 0, 0, 0.0048) !important;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important;
 }
 
 .shadow-sm {
@@ -9732,7 +9732,7 @@ fieldset:disabled .btn {
 }
 
 .text-danger {
-  color: #DF6951 !important;
+  color: #f87141 !important;
 }
 
 .text-light {
@@ -9835,6 +9835,10 @@ fieldset:disabled .btn {
   background-color: #212832 !important;
 }
 
+.bg-main{
+  background-color: #fcf3f1 !important;
+}
+
 .bg-white {
   background-color: #FFFEFE !important;
 }
@@ -9861,6 +9865,10 @@ fieldset:disabled .btn {
 
 .bg-danger {
   background-color: #DF6951 !important;
+}
+
+.bg-danger-spam {
+  background-color: #fddccf !important;
 }
 
 .bg-light {
@@ -19636,6 +19644,23 @@ iframe {
 .majestic-tabs .nav-item.show .nav-link {
   border-bottom-color: #DF6951;
 }
+
+/*-----------------------------------------------
+|   more Styles
+-----------------------------------------------*/
+/*--------------------------------------------------------------
+# Services Section
+--------------------------------------------------------------*/
+
+
+.border-rad-spam{
+  border-radius: 5px;
+}
+
+.svg__arrow{
+  color: red;
+}
+
 
 /*-----------------------------------------------
 |   User Styles
