--- a/styles__css/styles_bootstrap.css
+++ b/styles__css/styles_bootstrap.css
@@ -1,19 +1,3 @@
-/* -------------------------------------------------------------------------- */
-/*                                 Theme                                      */
-/* -------------------------------------------------------------------------- */
-/* prettier-ignore */
-/* -------------------------------------------------------------------------- */
-/*                                  Utilities                                 */
-/* -------------------------------------------------------------------------- */
-/*-----------------------------------------------
-|   Bootstrap Styles
------------------------------------------------*/
-/*!
- * Bootstrap v5.0.0-alpha1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
 :root {
   --bs-blue: #747DEF;
   --bs-indigo: #6237FF;
@@ -9836,7 +9820,7 @@ fieldset:disabled .btn {
 }
 
 .bg-main{
-  background-color: #fcf3f1 !important;
+  background-color: #fdfbf7c2 !important;
 }
 
 .bg-white {
@@ -19648,19 +19632,5 @@ iframe {
 /*-----------------------------------------------
 |   more Styles
 -----------------------------------------------*/
-/*--------------------------------------------------------------
-# Services Section
---------------------------------------------------------------*/
 
 
-.border-rad-spam{
-  border-radius: 5px;
-}
-
-
-
-/*-----------------------------------------------
-|   User Styles
------------------------------------------------*/
-
-/*# sourceMappingURL=theme.css.map */
