--- a/styles__css/styles.css
+++ b/styles__css/styles.css
@@ -24,5 +24,22 @@
   border-radius: 5px;
 }
 
+/*
+
+<div
+                    class="pt-5 text-center d-flex justify-content-between"
+                    style="border-top: 1px solid rgb(116, 114, 114);">
+                    <div class="row text-start"><p
+                            class="mb-0 text-secondary fs--1 fw-medium">All
+                            rights
+                            2023
+                        </p></div>
+                    <div class="row ps-6"><p
+                            class="mb-0 text-secondary fs--1 fw-medium">All
+                            rights
+                            2023
+                        </p></div>
+
+                </div>*/
 
 
